# PL_MVO_IROS17

./: README.md
PL_MVO_PLUM/: README.txt
PL_MVO_PLUM/Algorithm_Code_Matlab/: ConstrSynData.m  GetRelVar.m  PnPL_MinimalCase.m  constrCostFunc.m  deriveA _ls.m  deriveA_pt.m  expressTransByRotMinCase.m  solver_PnL_minCase.m
PL_MVO_SPOS/: README.txt
PL_MVO_SPOS/Data/: spacePts.txt
PL_MVO_SPOS/Src/: CMakeLists.txt  FileDisposal.cpp  FileDisposal.h  ImgLS.cpp  ImgLS.h  MinSampsonError.cpp  MinSampsonError.h  PL_MVO_SPOS.cpp  SpaceImgCorrLSs.cpp  SpaceImgCorrLSs.h  SpaceLS.cpp  SpaceLS.h
